New page and some effects
Create page to add new meal.
Add some effects on website.

--- a/index.html
+++ b/index.html
@@ -29,42 +29,90 @@
     </head>
 
     <body>
+        <div class="new-meal clearfix">
+            <button class="meal-botton"><i class="fas fa-plus"></i><a href="add-new-meal.html">إضافة وجبة جديدة</a></button>
+        </div>
         <div class="meal-card clearfix">
             <div class="meal-img">
                 <img src="images/meal-img-01.jpg" alt="" />
             </div><!--End Meal Img-->
             <div class="meal-info">
                 <h3>إسم الوجبة</h3>
+                <span><a href="#">سندويش</a><i class="fas fa-tag"></i></span>
                 <p>وصف موجز عن الوجبة وما تحويه من مكونات </p>
                 <div class="meal-order">
                     <span class="meal-price">20$</span>
-                    <button class="meal-botton">أطلبها</button>
+                    <button class="meal-botton"><i class="fas fa-shopping-basket"></i>أطلبها</button>
                 </div><!--End Meal Order-->
             </div><!--End Meal Info-->
         </div><!--End Meal Card-->
         <div class="meal-card clearfix">
             <div class="meal-img">
-                <img src="images/meal-img-01.jpg" alt="" />
+                <img src="images/meal-img-02.jpg" alt="" />
             </div><!--End Meal Img-->
             <div class="meal-info">
                 <h3>إسم الوجبة</h3>
+                <span><a href="#">لحوم</a><i class="fas fa-tag"></i></span>
                 <p>وصف موجز عن الوجبة وما تحويه من مكونات </p>
                 <div class="meal-order">
                     <span class="meal-price">20$</span>
-                    <button class="meal-botton">أطلبها</button>
+                    <button class="meal-botton"><i class="fas fa-shopping-basket"></i>أطلبها</button>
                 </div><!--End Meal Order-->
             </div><!--End Meal Info-->
         </div><!--End Meal Card-->
         <div class="meal-card clearfix">
             <div class="meal-img">
-                <img src="images/meal-img-01.jpg" alt="" />
+                <img src="images/meal-img-03.jpg" alt="" />
             </div><!--End Meal Img-->
             <div class="meal-info">
                 <h3>إسم الوجبة</h3>
+                <span><a href="#">سندويش</a><i class="fas fa-tag"></i></span>
                 <p>وصف موجز عن الوجبة وما تحويه من مكونات </p>
                 <div class="meal-order">
                     <span class="meal-price">20$</span>
-                    <button class="meal-botton">أطلبها</button>
+                    <button class="meal-botton"><i class="fas fa-shopping-basket"></i>أطلبها</button>
+                </div><!--End Meal Order-->
+            </div><!--End Meal Info-->
+        </div><!--End Meal Card-->
+        <div class="meal-card clearfix">
+            <div class="meal-img">
+                <img src="images/meal-img-04.jpg" alt="" />
+            </div><!--End Meal Img-->
+            <div class="meal-info">
+                <h3>إسم الوجبة</h3>
+                <span><a href="#">خضروات</a><i class="fas fa-tag"></i></span>
+                <p>وصف موجز عن الوجبة وما تحويه من مكونات </p>
+                <div class="meal-order">
+                    <span class="meal-price">20$</span>
+                    <button class="meal-botton"><i class="fas fa-shopping-basket"></i>أطلبها</button>
+                </div><!--End Meal Order-->
+            </div><!--End Meal Info-->
+        </div><!--End Meal Card-->
+        <div class="meal-card clearfix">
+            <div class="meal-img">
+                <img src="images/meal-img-05.jpg" alt="" />
+            </div><!--End Meal Img-->
+            <div class="meal-info">
+                <h3>إسم الوجبة</h3>
+                <span><a href="#">حلويات</a><i class="fas fa-tag"></i></span>
+                <p>وصف موجز عن الوجبة وما تحويه من مكونات </p>
+                <div class="meal-order">
+                    <span class="meal-price">20$</span>
+                    <button class="meal-botton"><i class="fas fa-shopping-basket"></i>أطلبها</button>
+                </div><!--End Meal Order-->
+            </div><!--End Meal Info-->
+        </div><!--End Meal Card-->
+        <div class="meal-card clearfix">
+            <div class="meal-img">
+                <img src="images/meal-img-06.jpg" alt="" />
+            </div><!--End Meal Img-->
+            <div class="meal-info">
+                <h3>إسم الوجبة</h3>
+                <span><a href="#">دجاج</a><i class="fas fa-tag"></i></span>
+                <p>وصف موجز عن الوجبة وما تحويه من مكونات </p>
+                <div class="meal-order">
+                    <span class="meal-price">20$</span>
+                    <button class="meal-botton"><i class="fas fa-shopping-basket"></i>أطلبها</button>
                 </div><!--End Meal Order-->
             </div><!--End Meal Info-->
         </div><!--End Meal Card-->
